# MAT-MEK4270

./: README.md
.github/workflows/: mandatory1.yml  mandatory2.yml
mandatory1/: README.md
mandatory2/: README.md  environment.yml  galerkin.py  pyproject.toml
